Fix spacing, add divtext to tag pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,7 @@ span.divtext {
   background: #eee;
   margin: 0;
   padding: 0 20px 0 20px;
+  text-transform: uppercase;
 }
 
 #outer-container {
@@ -132,7 +133,7 @@ span.divtext {
 #inner-container {
   margin: auto;
   margin-top: 400px;
-  padding: 4px 0px 4px 0px;
+  padding: 4px 0px 40px 0px;
   background-color: #eee;
 }
 
@@ -241,7 +242,7 @@ a .multibox-title {
 .author {
   width: 100%;
   height: 100px;
-  margin: 60px 0 64px 0;
+  margin: 60px 0 4px 0;
 }
 
 .author a {
@@ -329,6 +330,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 1vw;
     font-size: 3vw;
+  }
+
+  #splash-overlay {
+    font-size: 8vw;
   }
 
   .title {
